--- a/numpy_student_lab.ipynb
+++ b/numpy_student_lab.ipynb
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 104,
       "metadata": {
         "id": "8e2llPlAhiFx"
       },
@@ -70,9 +70,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "89e61965-c799-4fe3-fbe6-51376dfb89fd"
+        "outputId": "fbe3d8af-8978-4448-ddb5-4228808ae86a"
       },
-      "execution_count": 49,
+      "execution_count": 105,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -87,7 +87,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 49
+          "execution_count": 105
         }
       ]
     },
@@ -108,9 +108,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3951fecf-c32a-4a2b-a2bb-052c39f8a47b"
+        "outputId": "6b3ce307-6857-45d1-d0f3-0ac4e996a2d7"
       },
-      "execution_count": 50,
+      "execution_count": 106,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -129,7 +129,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 50
+          "execution_count": 106
         }
       ]
     },
@@ -150,9 +150,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "977ebc66-d18b-41e4-bde6-144b7db461ae"
+        "outputId": "8b2ff1c7-4528-4ab4-f8f7-cf27784a2eb3"
       },
-      "execution_count": 51,
+      "execution_count": 107,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -184,7 +184,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 51
+          "execution_count": 107
         }
       ]
     },
@@ -224,9 +224,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a09c2705-f56a-4419-a371-109b997c5fd2"
+        "outputId": "a62e1548-e548-46bb-b351-3bef962f8580"
       },
-      "execution_count": 52,
+      "execution_count": 108,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -326,7 +326,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 52
+          "execution_count": 108
         }
       ]
     },
@@ -347,9 +347,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9ae2e16a-c47f-4e40-f4b0-e35d7eaa7c75"
+        "outputId": "406e7ed3-be1c-44fe-9c50-a8991b73afae"
       },
-      "execution_count": 53,
+      "execution_count": 109,
       "outputs": [
         {
           "output_type": "stream",
@@ -408,9 +408,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0ab8090d-b535-4eb7-a797-2792adc78ef3"
+        "outputId": "d5570dfa-dd5f-45a9-f1dd-69d3f1d745b4"
       },
-      "execution_count": 54,
+      "execution_count": 110,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -422,7 +422,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 54
+          "execution_count": 110
         }
       ]
     },
@@ -439,9 +439,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "47a038c9-9e26-4732-b9d9-c037a5fffb5e"
+        "outputId": "69daf565-9338-44ad-9ff3-463bfe8bfcd7"
       },
-      "execution_count": 55,
+      "execution_count": 111,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -455,7 +455,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 55
+          "execution_count": 111
         }
       ]
     },
@@ -492,9 +492,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2d486be3-2873-4086-e6f1-d2c29938d439"
+        "outputId": "3e9316fc-7472-4cf8-8829-0abdaf9b1e5f"
       },
-      "execution_count": 56,
+      "execution_count": 112,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -753,7 +753,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 56
+          "execution_count": 112
         }
       ]
     },
@@ -776,9 +776,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ec31c25d-1e44-4fe1-ffaa-2e504ef07bac"
+        "outputId": "1af17e56-d09d-4bc6-9760-d72ac64b6f0b"
       },
-      "execution_count": 57,
+      "execution_count": 113,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -913,7 +913,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 57
+          "execution_count": 113
         }
       ]
     },
@@ -936,9 +936,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9bf7e803-2405-4563-ca30-67ca52e1bf19"
+        "outputId": "afe6cefc-9bca-4833-d254-b784dffeb37e"
       },
-      "execution_count": 58,
+      "execution_count": 114,
       "outputs": [
         {
           "output_type": "stream",
@@ -984,9 +984,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ee079a0f-d72e-4aaa-ebbf-518a60100a9d"
+        "outputId": "8667713f-39fe-4409-a035-0630814cd188"
       },
-      "execution_count": 59,
+      "execution_count": 115,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -996,7 +996,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 59
+          "execution_count": 115
         }
       ]
     },
@@ -1018,9 +1018,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a143da03-16d0-49f9-8976-52d707dc5b71"
+        "outputId": "055d0f8f-20f6-4128-ffe3-f10ac7688145"
       },
-      "execution_count": 60,
+      "execution_count": 116,
       "outputs": [
         {
           "output_type": "stream",
@@ -1071,7 +1071,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 60
+          "execution_count": 116
         }
       ]
     },
@@ -1102,9 +1102,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0bd966ea-5610-456d-bdf0-f46ab14675ac"
+        "outputId": "0edab231-5e6f-4755-9fc5-217c2ef31b59"
       },
-      "execution_count": 61,
+      "execution_count": 117,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1114,7 +1114,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 61
+          "execution_count": 117
         }
       ]
     },
@@ -1158,9 +1158,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8db8acc0-9f30-4405-acfa-046e679fa99f"
+        "outputId": "4d309ad6-9112-424b-c55e-bb1435f3bc6f"
       },
-      "execution_count": 62,
+      "execution_count": 118,
       "outputs": [
         {
           "output_type": "stream",
@@ -1213,9 +1213,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7eac9259-6beb-4e5c-9ea4-a57f63e94656"
+        "outputId": "67a2c9f4-14f8-4954-cc60-988e0fceeeab"
       },
-      "execution_count": 63,
+      "execution_count": 119,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1225,7 +1225,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 63
+          "execution_count": 119
         }
       ]
     },
@@ -1255,15 +1255,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e1d8b8ab-6a70-4fdc-85cb-a8030df38be9"
+        "outputId": "041263b8-df22-4a57-e834-cd2c827d2391"
       },
-      "execution_count": 64,
+      "execution_count": 120,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0.4497\n"
+            "0.8309\n"
           ]
         }
       ]
@@ -1283,15 +1283,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d5ae79ad-7fa7-44d5-99a1-b211ec6be0c1"
+        "outputId": "ee6d0c90-b721-41c8-d706-1ba4aafd3bf1"
       },
-      "execution_count": 65,
+      "execution_count": 121,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "131.9\n"
+            "161.4\n"
           ]
         }
       ]
@@ -1325,13 +1325,33 @@
         "# - Broadcasting is key\n",
         "\n",
         "def pairwise_distance(X):\n",
-        "    ...\n"
+        "  sq = np.sum(X*X,axis=1,keepdims=True)\n",
+        "  dist = sq + sq.T - 2*(X@X.T)\n",
+        "  dist = np.maximum(dist,0.0)\n",
+        "  return np.sqrt(dist)\n",
+        "\n",
+        "rng = np.random.default_rng(3)\n",
+        "xsmall = rng.standard_normal((200,10))\n",
+        "D = pairwise_distance(xsmall)\n",
+        "print(D.shape)"
       ],
       "metadata": {
-        "id": "XISh6eh3joJ7"
+        "id": "XISh6eh3joJ7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "09c02795-f3c4-495d-b492-39e6a9cdac27"
       },
-      "execution_count": 66,
-      "outputs": []
+      "execution_count": 122,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(200, 200)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1372,9 +1392,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "61f649e5-a3bf-48af-d38d-5c1d257451d4"
+        "outputId": "674028c2-ee3a-4a01-c609-35ddba8a766e"
       },
-      "execution_count": 67,
+      "execution_count": 123,
       "outputs": [
         {
           "output_type": "stream",
@@ -1410,9 +1430,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ee79863f-0bee-4608-a711-03f8b825d47e"
+        "outputId": "91af5e30-9d41-445e-b1b2-a233f26c0a98"
       },
-      "execution_count": 68,
+      "execution_count": 124,
       "outputs": [
         {
           "output_type": "stream",
@@ -1476,9 +1496,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5504282b-3209-400a-bf8a-14a10187b2ec"
+        "outputId": "f2d1abaf-ef87-418f-c958-1e014669c20f"
       },
-      "execution_count": 81,
+      "execution_count": 125,
       "outputs": [
         {
           "output_type": "stream",
@@ -1528,9 +1548,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a7610766-2ceb-4816-b8f4-c6c286c9aff6"
+        "outputId": "791d8020-b829-4f1d-b324-22793e11b2e5"
       },
-      "execution_count": 83,
+      "execution_count": 126,
       "outputs": [
         {
           "output_type": "stream",
@@ -1584,16 +1604,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d8506824-0a05-494b-c563-fb4cc5dd5025"
+        "outputId": "1a769276-893f-47fc-d769-bfc7906bad85"
       },
-      "execution_count": 84,
+      "execution_count": 127,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "out of place: 0.0078\n",
-            "in place: 0.002\n"
+            "out of place: 0.0093\n",
+            "in place: 0.0025\n"
           ]
         }
       ]
@@ -1623,9 +1643,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "20b0f557-50a1-4706-dc78-b6b6401d2dfe"
+        "outputId": "a687353f-f1f9-419c-fbe8-ffac5bbcaa1b"
       },
-      "execution_count": 96,
+      "execution_count": 128,
       "outputs": [
         {
           "output_type": "stream",
@@ -1672,9 +1692,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8b2c563b-6b5f-4e5c-8f20-a59824868588"
+        "outputId": "6b15f933-4df4-47a7-d712-28e0ccae50e7"
       },
-      "execution_count": 91,
+      "execution_count": 129,
       "outputs": [
         {
           "output_type": "stream",
@@ -1692,7 +1712,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 91
+          "execution_count": 129
         }
       ]
     },
